Fixed wrong key usage which caused wrong result for some "WHERE primary_key=constant" queries where MySQL could use 'only index' (Bug #3666) The bug was introduced in a patch in the 4.1.2 source tree.

mysql-test/r/key.result:
  New result
mysql-test/t/key.test:
  Added test case for bug in key read
sql/sql_select.cc:
  Fixed wrong key usage which caused wrong result for some "WHERE primary_key=constant" queries where MySQL could use 'only index' (Bug #3666)